[package]
name = "tisk"
version = "0.1.0"
authors = ["Erich Ess <erich.g.ess@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log4rs = "0.11.0"
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = "2.33.0"
